--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@ project/plugins/project/
 
 # Scala-IDE specific
 .scala_dependencies
+
+# eclipse project files
+.project
+.classpath
+
+# gedit file backup
+*~
